--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -15,8 +15,9 @@
 
   <highcharts-chart 
   [Highcharts]="Highcharts"
+  [callbackFunction]="chartCallback"
   [options]="chartOptions"
-  style="width: 100%; height: 400px; display: block;"
+  style="display: flex;"
 
 ></highcharts-chart>
  
